@@ -519,6 +519,10 @@ DataManager::AssRes(VectorHandler& ResHdl, doublereal dCoef,
 				throw ErrDivideByZero(MBDYN_EXCEPT_ARGS);
 			}
 
+#if 0
+			silent_cerr("### " << psElemNames[pTmpEl->GetElemType()] << "(" << pTmpEl->GetLabel() <<"):" << std::endl);
+			PrintResidual(ResHdl, -1);
+#endif
 		} while (Iter.bGetNext(pTmpEl));
 	}
 	if (ChangedEqStructure) {
